fix overflow

--- a/style.css
+++ b/style.css
@@ -3,11 +3,14 @@
   --color-white: #ffffff;
   --color-black: #232323;
 }
+html {
+  overflow-x: hidden;
+}
 .hero__section {
   background-image: url("assets/bg.png");
   background-repeat: no-repeat;
   background-size: cover;
-  width: 100vw;
+  width: 100%;
   height: 53.125rem;
   display: flex;
   flex-direction: column;
